addons/prometheus-operator/manifests/patch/ingress/grafana-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: grafana
  namespace: monitoring
spec:
  tls:
  - hosts:
    - k8s-grafana.fdisk.cc
    secretName: wildcard.fdisk.cc
  rules:
  - host: k8s-grafana.fdisk.cc
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
