addons/prometheus-operator/manifests/patch/ingress/prometheus-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: prometheus-k8s
  namespace: monitoring
spec:
  tls:
  - hosts:
    - k8s-prometheus.fdisk.cc
    secretName: wildcard.fdisk.cc
  rules:
  - host: k8s-prometheus.fdisk.cc
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-k8s
          servicePort: 9090
